@@ -10,6 +10,7 @@ Version 0.12
 
 - Include "all archives" size information in "--stats" output. (#54)
 - Switch to SI units (Power of 1000 instead 1024) when printing file sizes
+- Added "--stats" option to 'attic delete' and 'attic prune'
 
 Version 0.11
 ------------
